fix: udpate preBuild command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:win": "set NODE_OPTIONS=--openssl-legacy-provider && node --max_old_space_size=4096 ./node_modules/vuepress/cli.js dev docs",
     "build:win": "set NODE_OPTIONS=--openssl-legacy-provider && node --max_old_space_size=4096 ./node_modules/vuepress/cli.js build docs",
     "predev": "node utils/check.js dev && vdoing",
-    "prebuild": "node utils/check.js build && vdoing",
+    "prebuild": "node utils/check.js build && ./vdoing/bin/checkVersion.js",
     "editFm": "node utils/editFrontmatter.js",
     "publish": "cd ./vdoing && npm publish && cd .. && yarn updateTheme",
     "updateTheme": "yarn remove vuepress-theme-vdoing && rm -rf node_modules && yarn && yarn add vuepress-theme-vdoing -D"
